--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -19,9 +19,10 @@
   padding-top: 0;
   display: flex;
   flex-wrap: wrap;
-}
-.catalog__item:last-child {
-  border-bottom: 1px solid rgb(237, 237, 237);
+
+  &:last-child {
+    border-bottom: 1px solid rgb(237, 237, 237);
+  }
 }
 
 .catalog__button {
