--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -5,11 +5,8 @@
 
 .advantages__header {
   font-size: 36px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.67;
-  color: black;
+  color: @black-color;
   margin: 0;
   margin-bottom: 30px;
 }
@@ -20,14 +17,9 @@
 }
 
 .advantages__item {
-  font-family: "Arial", sans-serif;
+  font-family: @arial;
   font-size: 14px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.29;
-  letter-spacing: normal;
-  text-align: left;
   color: rgb(68, 68, 68);
   margin-bottom: 25px;
 }
