--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -2,7 +2,7 @@
   width: 280px;
   height: 40px;
   background-color: #68b738;
-  color: white;
+  color: @white-color;
   display: block;
   text-decoration: none;
   text-transform: uppercase;
