--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -24,15 +24,10 @@
 }
 
 .program__text {
-  font-family: "Arial", sans-serif;
+  font-family: @arial;
   font-size: 14px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.29;
-  letter-spacing: normal;
-  text-align: left;
-  color: rgb(68, 68, 68);
+  color: @greyish-brown-color;
   margin: 0 20px;
   border-bottom: 1px solid rgb(217, 217, 217);
   padding-bottom: 20px;
@@ -42,12 +37,7 @@
 .program__link {
   font-size: 16px;
   text-transform: uppercase;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: normal;
   text-decoration: none;
-  color: black;
+  color: @black-color;
   margin-left: 20px;
 }
