--- a/source/less/blocks/table-features.less
+++ b/source/less/blocks/table-features.less
@@ -1,12 +1,7 @@
 .table-features__name {
   font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.25;
-  letter-spacing: normal;
-  text-align: left;
-  color: black;
+  color: @black-color;
   padding-top: 20px;
   text-transform: uppercase;
   width: 100px;
@@ -14,15 +9,10 @@
 }
 
 .table-features__cell {
-  font-family: "Arial", sans-serif;
+  font-family: @arial;
   font-size: 12px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.33;
-  letter-spacing: normal;
-  text-align: left;
-  color: rgb(68, 68, 68);
+  color: @greyish-brown-color;
   margin: 0;
 }
 
