--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -2,18 +2,14 @@
   padding-left: 20px;
   font-size: 36px;
   font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.67;
-  letter-spacing: normal;
-  text-align: left;
-  color: black;
+  color: @black-color;
   margin: 0;
   margin-top: 20px;
 }
 
 .catalog__item {
-  border: 1px solid rgb(237, 237, 237);
+  border: 1px solid #ededed;
   border-bottom: none;
   padding: 24px 20px;
   padding-top: 0;
@@ -21,17 +17,13 @@
   flex-wrap: wrap;
 
   &:last-child {
-    border-bottom: 1px solid rgb(237, 237, 237);
+    border-bottom: 1px solid #ededed;
   }
 }
 
 .catalog__button {
   font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.25;
-  letter-spacing: normal;
   text-align: center;
   padding-top: 10px;
 }
