--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -7,15 +7,9 @@
 .copyright__link {
   display: block;
   text-decoration: none;
-  font-family: "Arial", sans-serif;
+  font-family:@arial;
   font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: normal;
-  text-align: left;
-  color: rgb(68, 68, 68);
+  color: @greyish-brown-color;
   margin-top: 30px;
 }
 
