--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -10,24 +10,16 @@
 .promo__header {
   font-size: 36px;
   font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: normal;
   text-align: center;
-  color: white;
+  color: @white-color;
 }
 
 .promo__motivation {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: normal;
   text-align: center;
-  color: white;
+  color: @white-color;
   margin-bottom: 300px;
 }
 
