--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,7 +1,7 @@
 .social {
   list-style: none;
-  border-top: 1px solid rgb(217, 217, 217);
-  border-bottom: 1px solid rgb(217, 217, 217);
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; //временно
