--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,34 +1,9 @@
-@import "blocks/normalize.less";
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-body {
-  background: white;
-  margin: 0 auto;
-  font-family: "Oswald", "Arial", sans-serif;
-  width: 320px;
-}
-
-@font-face {
-  font-family: "Oswald";
-  src:
-    url("../fonts/oswaldregular.woff2") format("woff2"),
-    url("../fonts/oswaldregular.woff") format("woff"),
-    url("../fonts/oswaldmedium.woff2") format("woff2"),
-    url("../fonts/oswaldmedium.woff") format("woff"),;
-}
-
+@import "normalize.less";
+@import "fonts.less";
+@import "globals.less";
+@import "visually-hidden.less";
 @import "blocks/button.less";
 @import "blocks/promo.less";
-@import "blocks/visually-hidden.less";
 @import "blocks/nav.less";
 @import "blocks/program.less";
 @import "blocks/advantages.less";
