--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -16,9 +16,9 @@
   display: flex;
   flex-wrap: wrap;
 
-  &:last-child {
-    border-bottom: 1px solid #ededed;
-  }
+  //&:last-child {
+  //  border-bottom: 1px solid #ededed;
+  //}
 }
 
 .catalog__button {
