--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,3 +12,4 @@
 @import "blocks/copyright.less";
 @import "blocks/catalog.less";
 @import "blocks/table-features.less";
+@import "blocks/more.less";
