--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -17,9 +17,9 @@
 }
 
 .advantages__item {
-  font-family: @arial;
+  font-family: @font-family-additional;
   font-size: 14px;
   line-height: 1.29;
-  color: rgb(68, 68, 68);
+  color: @greyish-brown-color;
   margin-bottom: 25px;
 }
