--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,6 +1,6 @@
 .button {
   width: 280px;
-  height: 40px;
+  min-height: 40px;
   background-color: #68b738;
   color: @white-color;
   display: block;
