--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -7,8 +7,9 @@
 .copyright__link {
   display: block;
   text-decoration: none;
-  font-family: @arial;
+  font-family: @font-family-additional;
   font-size: 16px;
+  line-height: 1;
   color: @greyish-brown-color;
   margin-top: 30px;
 }
