--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,6 +1,6 @@
 .nav {
   min-height: 66px;
-  border-bottom: 1px solid rgb(230, 230, 230);
+  border-bottom: 1px solid #e6e6e6;
   padding-top: 11px;
   padding-left: 20px;
 }
