--- a/source/less/globals.less
+++ b/source/less/globals.less
@@ -9,13 +9,8 @@ html {
 }
 
 body {
-  background: white;
+  background: @white-color;
   margin: 0 auto;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-family-base;
   width: 320px;
 }
-
-@white-color: #FFFFFF;
-@greyish-brown-color:#444444; //68 68 68
-@black-color:#000000;
-@arial: "Arial", sans-serif;
