--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "normalize.less";
 @import "fonts.less";
 @import "globals.less";
+@import "variables.less";
 @import "visually-hidden.less";
 @import "blocks/button.less";
 @import "blocks/promo.less";
