--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -29,13 +29,14 @@
   line-height: 1.29;
   color: @greyish-brown-color;
   margin: 0 20px;
-  border-bottom: 1px solid rgb(217, 217, 217);
+  border-bottom: 1px solid #d9d9d9;
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
 
 .program__link {
   font-size: 16px;
+  line-height: 1;
   text-transform: uppercase;
   text-decoration: none;
   color: @black-color;
