--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -9,6 +9,7 @@
 
 .promo__header {
   font-size: 36px;
+  line-height: 1;
   font-weight: normal;
   text-align: center;
   color: @white-color;
@@ -17,6 +18,7 @@
 .promo__motivation {
   text-transform: uppercase;
   font-size: 14px;
+  line-height: 1;
   font-weight: normal;
   text-align: center;
   color: @white-color;
