--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,5 +1,5 @@
 .footer__grey {
-  background-color: #f2f2f2;
+  background-color: @background-additional;
   padding-top: 39px;
   padding-left: 20px;
   padding-right: 20px;
