--- a/source/less/blocks/more.less
+++ b/source/less/blocks/more.less
@@ -24,7 +24,7 @@
 }
 
 .more__button {
-  background-color: #f2f2f2;
+  background-color: @background-additional;
   margin: 0 auto;
   color: @greyish-brown-color;
   padding-top: 10px;
