--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,3 +14,4 @@
 @import "blocks/catalog.less";
 @import "blocks/table-features.less";
 @import "blocks/more.less";
+@import "blocks/example.less";
