--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -3,3 +3,4 @@
 @black-color:#000000;
 @font-family-base: "Oswald", "Arial", sans-serif;
 @font-family-additional: "Arial", sans-serif;
+@background-additional:#f2f2f2;
