--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -21,6 +21,17 @@
   //}
 }
 
+.catalog__name {
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.25;
+  color: @black-color;
+  padding-top: 20px;
+  text-transform: uppercase;
+  //width: 100px;
+  margin-bottom: 13px;
+}
+
 .catalog__button {
   font-size: 16px;
   line-height: 1.25;
