--- a/source/less/blocks/table-features.less
+++ b/source/less/blocks/table-features.less
@@ -1,15 +1,15 @@
-.table-features__name {
-  font-size: 16px;
-  line-height: 1.25;
-  color: @black-color;
-  padding-top: 20px;
-  text-transform: uppercase;
-  width: 100px;
-  margin-bottom: 13px;
-}
+//.table-features__name {
+// font-size: 16px;
+//line-height: 1.25;
+//color: @black-color;
+//padding-top: 20px;
+//text-transform: uppercase;
+//width: 100px;
+//margin-bottom: 13px;
+//}
 
 .table-features__cell {
-  font-family: @arial;
+  font-family: @font-family-additional;
   font-size: 12px;
   line-height: 1.33;
   color: @greyish-brown-color;
