--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,5 +1,5 @@
 .footer__grey {
-  background-color: #f2f2f2;
+  background-color: @background-color-additional;
   padding-top: 39px;
   padding-left: 20px;
   padding-right: 20px;
@@ -11,4 +11,43 @@
   height: 24px;
   margin: 0 auto;
   margin-bottom: 30px;
+}
+
+.footer__header {
+  width: 123px;
+  display: block;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.25;
+  color: #111111;
+  text-transform: uppercase;
+}
+
+.footer__address {
+  width: 134px;
+  display: block;
+  font-family: @font-family-additional;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1.43;
+  color: @greyish-brown-color;
+}
+
+.footer__wrapper {
+  min-height: 114px;
+  display: flex;
+  justify-content: space-around;
+  background-color: @background-color-base;
+}
+
+.footer__wrapper--grey {
+  background-color: @background-color-additional;
+}
+
+.footer__map {
+  min-height: 362px;
+  background-image: url("../img/bg-map-mobile@1x.png");
+  background-position: 0 -38px;
+  background-repeat: no-repeat;
 }
