--- a/source/less/blocks/more.less
+++ b/source/less/blocks/more.less
@@ -15,7 +15,7 @@
 }
 
 .more__taste {
-  font-family: @arial;
+  font-family: @font-family-additional;
   font-size: 12px;
   line-height: 16px;
   text-align: center;
@@ -24,7 +24,7 @@
 }
 
 .more__button {
-  background-color: #f2f2f2;
+  background-color: @background-color-additional;
   margin: 0 auto;
   color: @greyish-brown-color;
   padding-top: 10px;
