--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -7,7 +7,7 @@
 .program__variant {
   min-height: 266px;
   width: 280px;
-  background-color: rgb(242, 242, 242);
+  background-color: @background-color-additional;
   padding-top: 10px;
   margin-bottom: 20px;
 }
@@ -24,12 +24,12 @@
 }
 
 .program__text {
-  font-family: @arial;
+  font-family: @font-family-additional;
   font-size: 14px;
   line-height: 1.29;
   color: @greyish-brown-color;
   margin: 0 20px;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid @border-color;
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
