--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,3 +14,10 @@
 @import "blocks/catalog.less";
 @import "blocks/table-features.less";
 @import "blocks/more.less";
+@import "blocks/example.less";
+@import "blocks/stat.less";
+@import "blocks/extra.less";
+@import "blocks/table-extra.less";
+@import "blocks/gift.less";
+@import "blocks/selection.less";
+@import "blocks/form-select.less";
