--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -3,3 +3,6 @@
 @black-color:#000000;
 @font-family-base: "Oswald", "Arial", sans-serif;
 @font-family-additional: "Arial", sans-serif;
+@background-color-base: #FFFFFF;
+@background-color-additional:#f2f2f2;
+@border-color:#d9d9d9;
