--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -39,10 +39,10 @@
   display: flex;
   justify-content: space-around;
   background-color: @background-color-base;
-}
 
-.footer__wrapper--grey {
-  background-color: @background-color-additional;
+  &--grey {
+    background-color: @background-color-additional;
+  }
 }
 
 .footer__map {
