--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,5 +1,5 @@
 @font-face {
-  font-weight: 400;
+  font-weight: normal;
   font-family: "Oswald";
   font-style: normal;
   font-display: swap;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-weight: 500;
+  font-weight: medium;
   font-family: "Oswald";
   font-style: normal;
   font-display: swap;
