--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -2,12 +2,12 @@
   font-size: 36px;
   font-weight: normal;
   line-height: 1.67;
-  color: #111111;
+  color: @black-color;
 }
 
 .selection__text {
   font-size: 14px;
   font-weight: normal;
   line-height: 1.29;
-  color: #111111;
+  color: @black-color;
 }
