--- a/source/less/blocks/stat.less
+++ b/source/less/blocks/stat.less
@@ -10,7 +10,7 @@
   font-weight: normal;
   line-height: 1;
   text-align: center;
-  color: #111111;
+  color: @black-color;
   text-transform: uppercase;
   padding-top: 12px;
 }
