--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -15,6 +15,7 @@
 .advantages__list {
   list-style: none;
   padding-left: 80px;
+  margin: 0;
 }
 
 .advantages__item {
@@ -23,4 +24,47 @@
   line-height: 1.29;
   color: @greyish-brown-color;
   margin-bottom: 25px;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages {
+    padding-left: 30px;
+    padding-right: 30px;
+    border-bottom: 1px solid #e6e6e6; // цвет проверить, и маргины мешают.
+  }
+
+  .advantages__header {
+    font-size: 60px;
+    line-height: 1;
+    margin-bottom: 70px;
+  }
+
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0;
+  }
+
+  .advantages__item {
+    width: 325px;
+    min-height: 240px;
+    font-size: 16px;
+    line-height: 1.5;
+    padding-top: 95px;
+    padding-right: 60px;
+    margin-bottom: 77px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages {
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+
+  .advantages__item {
+    width: 245px;
+    padding-right: 0;
+  }
 }
