--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -30,7 +30,7 @@
   font-weight: normal;
   line-height: 1.43;
   text-align: center;
-  color: #111111;
+  color: @black-color;
   text-transform: uppercase;
   padding-left: 20px;
   padding-right: 20px;
@@ -39,6 +39,6 @@
 .example__checkbox-text {
   font-size: 16px;
   font-weight: normal;
-  color: #111111;
+  color: @black-color;
   text-transform: uppercase;
 }
