--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -6,7 +6,7 @@
   font-size: 24px;
   font-weight: normal;
   line-height: 1;
-  color: #111111;
+  color: @black-color;
   border-bottom: 1px solid #cdcdcd;
   padding-bottom: 35px;
 }
