--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -19,7 +19,7 @@
   font-size: 16px;
   font-weight: normal;
   line-height: 1.25;
-  color: #111111;
+  color: @black-color;
   text-transform: uppercase;
 }
 
@@ -50,4 +50,23 @@
   background-image: url("../img/bg-map-mobile@1x.png");
   background-position: 0 -38px;
   background-repeat: no-repeat;
+}
+
+@media (min-width: @tablet-width) {
+  .footer__grey {
+    display: flex;
+    justify-content: space-between;
+    padding: 64px 30px 60px;
+  }
+
+  .footer__logo-link {
+    margin: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .footer__grey {
+    padding-left: 110px;
+    padding-right: 110px;
+  }
 }
