--- a/source/less/blocks/form-select.less
+++ b/source/less/blocks/form-select.less
@@ -10,7 +10,7 @@
   font-size: 24px;
   font-weight: normal;
   line-height: 1;
-  color: #111111;
+  color: @black-color;
 }
 
 .form-select__footnote {
