--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -9,17 +9,18 @@
   width: 280px;
   background-color: @background-color-additional;
   padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-bottom: 20px;
 }
 
 .program__header {
   font-size: 24px;
   font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.54;
-  padding-left: 90px;
+  padding-left: 70px;
   text-transform: uppercase;
+  margin: 0;
   margin-bottom: 30px;
 }
 
@@ -28,9 +29,9 @@
   font-size: 14px;
   line-height: 1.29;
   color: @greyish-brown-color;
-  margin: 0 20px;
   border-bottom: 1px solid @border-color;
   padding-bottom: 20px;
+  margin: 0;
   margin-bottom: 20px;
 }
 
@@ -40,5 +41,62 @@
   text-transform: uppercase;
   text-decoration: none;
   color: @black-color;
-  margin-left: 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .program__variant {
+    min-height: 372px;
+    width: 708px;
+    padding: 77px 52px 60px;
+    margin-bottom: 30px;
+  }
+
+  .program__header {
+    font-size: 36px;
+    line-height: 1.03;
+    padding: 0;
+    margin-bottom: 22px;
+  }
+
+  .program__text {
+    width: 372px; //исправить
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+    border: none;
+    margin-bottom: 37px;
+
+    &--mass {
+      width: 340px;
+    }
+  }
+
+  .program__link { //возможно его лучше сделать через absolute
+    font-size: 20px;
+    margin-left: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .program {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 80px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+
+  .program__variant {
+    width: 570px;
+  }
+
+  .program__header {
+    padding-left: 162px;
+    margin-bottom: 71px;
+  }
+
+  .program__text {
+    width: 463px;
+    margin-bottom: 12px;
+  }
 }
