--- a/source/less/blocks/table-features.less
+++ b/source/less/blocks/table-features.less
@@ -1,13 +1,3 @@
-//.table-features__name {
-// font-size: 16px;
-//line-height: 1.25;
-//color: @black-color;
-//padding-top: 20px;
-//text-transform: uppercase;
-//width: 100px;
-//margin-bottom: 13px;
-//}
-
 .table-features__cell {
   font-family: @font-family-additional;
   font-size: 12px;
@@ -24,4 +14,17 @@
   border-spacing: 0;
   width: 138px;
   padding: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .table-features {
+    width: 100%;
+  }
+
+  .table-features__cell {
+    font-size: 16px;
+    line-height: 1;
+    border-bottom: 1px solid #cdcdcd;
+    padding: 10px 0;
+  }
 }
