--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -7,9 +7,9 @@
 }
 
 @font-face {
-  font-weight: medium;
+  font-weight: 500; //если поставить medium вместо 500, то почему-то начинает использоваться этот шрифт везде, даже там, где явно указан font-weight: normal;
   font-family: "Oswald";
   font-style: normal;
   font-display: swap;
-  src: local("Oswald Regular"), url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
+  src: local("Oswald Medium"), url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
 }
