--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,8 +1,10 @@
 @white-color: #FFFFFF;
 @greyish-brown-color:#444444; //68 68 68
-@black-color:#000000;
+@black-color:#111111;
 @font-family-base: "Oswald", "Arial", sans-serif;
 @font-family-additional: "Arial", sans-serif;
 @background-color-base: #FFFFFF;
 @background-color-additional:#f2f2f2;
 @border-color:#d9d9d9;
+@tablet-width: 768px;
+@desktop-width: 1440px;
