--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-weight: 500; //если поставить medium вместо 500, то почему-то начинает использоваться этот шрифт везде, даже там, где явно указан font-weight: normal;
+  font-weight: 500;
   font-family: "Oswald";
   font-style: normal;
   font-display: swap;
