--- a/source/less/blocks/table-features.less
+++ b/source/less/blocks/table-features.less
@@ -14,6 +14,7 @@
   border-spacing: 0;
   width: 138px;
   padding: 0;
+  margin: 0;
 }
 
 @media (min-width: @tablet-width) {
@@ -25,6 +26,6 @@
     font-size: 16px;
     line-height: 1;
     border-bottom: 1px solid #cdcdcd;
-    padding: 10px 0;
+    padding: 7px 0;
   }
 }
