--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -7,4 +7,5 @@
 @background-color-additional:#f2f2f2;
 @border-color:#d9d9d9;
 @tablet-width: 768px;
-@desktop-width: 1440px;
+@desktop-width: 1300px;
+@desktop-max-width: 1440px;
