--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -18,3 +18,18 @@
   display: block;
   margin-top: 22px;
 }
+
+@media (min-width: @tablet-width) {
+  .copyright {
+    min-height: none;
+  }
+
+  .copyright__link {
+    margin-top: 1px;
+    margin-right: 23px;
+  }
+
+  .copyright__logo {
+    margin-top: -6px;
+  }
+}
