--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,8 +1,19 @@
 .nav {
-  min-height: 66px;
+  min-height: 65px;
   border-bottom: 1px solid #e6e6e6;
   padding-top: 11px;
   padding-left: 20px;
+  padding-right: 19px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__logo-link {
+  text-decoration: none;
+}
+
+.nav__logo-image {
+  display: block;
 }
 
 .nav__list {
@@ -13,23 +24,25 @@
 }
 
 .nav__toggle {
-  width: 12px;
-  height: 8px;
-  margin-left: 65px;
+  width: 25px;
+  height: 19px;
+  margin-top: 10px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/icon-mobile-menu.svg");
 }
-
-.nav__logo-link {
-  text-decoration: none;
-}
-
 
 @media (min-width: @tablet-width) {
   .nav {
-    display: flex;
-    padding-top: 25px;
+    padding-top: 24px;
     padding-left: 30px;
     padding-right: 30px;
     border-bottom: none;
+  }
+
+  .nav__logo-image {
+    width: 174px;
+    height: 59px;
   }
 
   .nav__toggle {
@@ -42,7 +55,7 @@
     width: 440px;
     margin: 0;
     margin-left: auto;
-    padding-top: 20px;
+    padding-top: 18px;
   }
 }
 
@@ -66,6 +79,11 @@
       position: absolute;
       width: @desktop-max-width;
     }
+  }
+
+  .nav__logo-image {
+    width: 203px;
+    height: 60px;
   }
 
   .nav__list {
