--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -38,9 +38,9 @@
     background-image: url("../img/index-can-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-size: auto;
-    background-position: center 250px;
-    padding-left: 120px;
-    min-height: 860px;
+    background-position: center 257px;
+    padding-left: 118px;
+    min-height: 866px;
   }
 
   .promo__header {
@@ -49,13 +49,14 @@
     color: @black-color;
     font-weight: normal;
     text-align: left;
+    margin-top: 53px;
   }
 
   .promo__motivation {
     font-size: 20px;
     color: @black-color;
     text-align: left;
-    margin-bottom: 50px;
+    margin-bottom: 47px;
   }
 
   .promo__button {
