--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -4,19 +4,52 @@
   border-bottom: 1px solid @border-color;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around; //временно
+  justify-content: space-between;
   padding: 0;
-  padding-top: 25px;
-  padding-bottom: 22px;
+  padding-top: 24px;
+  padding-bottom: 8px;
   margin: 0;
 }
 
 .social__item {
   list-style: none;
+  margin-bottom: 10px;
+  margin-right: 40px;
+  transform: translateX(-4px);
+
+  &:first-child {
+    margin-left: auto;
+    margin-right: 36px;
+    margin-top: -1px;
+  }
+
+  &:last-child {
+    margin-right: auto;
+    margin-top: -2px;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .social {
     border: none;
+    padding: 0;
+  }
+
+  .social__item {
+    margin-bottom: 10px;
+    margin-right: 29px;
+    transform: translateX(10px);
+
+    &:first-child {
+      margin-left: auto;
+      margin-right: 36px;
+      margin-top: 2px;
+      margin-right: 28px;
+    }
+
+    &:last-child {
+      margin-right: auto;
+      margin-top: -4px;
+    }
   }
 }
