--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -6,7 +6,8 @@
   padding-bottom: 35px;
 }
 
-.example__wrapper {
+.example__wrapper,
+.example__wrapper-2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -49,10 +50,16 @@
   margin-bottom: 44px;
 }
 
+.example__after {
+  display: none;
+}
+
 .example__picture {
   margin-left: -20px;
   margin-bottom: 34px;
   display: block;
+  width: 311px;
+  height: 232px;
 }
 
 .example__checkbox-text {
@@ -87,6 +94,7 @@
     height: 6px;
     border-radius: 3px;
     background-color: @leaf;
+    top: 3px;
   }
 }
 
@@ -102,15 +110,6 @@
     padding-right: 30px;
     padding-bottom: 217px;
     min-height: 619px;
-
-    &--checkbox {
-      padding-top: 367px;
-      padding-left: 99px;
-      padding-right: 100px;
-      min-height: 462px;
-      background-color: @background-color-additional;
-      border: 1px solid red;
-    }
   }
 
   .example__header {
@@ -139,24 +138,56 @@
     margin-left: auto;
   }
 
-  .example__picture { //временно.
-    //width: 636px;
-    //height: 517px;
-    margin: 0 auto;
-    //border: 1px solid red;
-    display: none;
+  .example__wrapper-2 {
+    //padding-top: 10px;
+    //padding-left: 99px;
+    //padding-right: 100px;
+    //padding-bottom: 10px;
+    min-height: 462px;
+   // background-color: @background-color-additional;
+    border: 1px solid red;
+  }
+
+  .example__picture {
+    margin: 0;
+  }
+
+  .example__before {
+    width: 50%;
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .example__picture--before {
+    margin-top: -100px;
+    width: 338px;
+    height: 449px;
+    margin-left: auto;
+  }
+
+  .example__after {
+    width: 50%;
+    display: block;
+    background-color: #eaeaea;
+  }
+
+  .example__picture--after {
+    margin-top: -150px;
+    width: 298px;
+    height: 517px;
+    margin-right: auto;
   }
 
   .example__checkbox-text {
     font-size: 20px;
-    margin-left: 0;
+    margin-left: 99px;
     margin-right: auto;
     border-bottom: 1px dotted #dcdcdc; //проверить цвет
     //padding-bottom: 4px;
     padding-bottom: 0;
 
     &--after {
-      margin-right: 0;
+      margin-right: 100px;
       margin-left: auto;
       text-align: right;
     }
@@ -170,7 +201,7 @@
     border: solid 1px @pinkish-grey;
     background-color: @white-color;
     transform: translate(2px, -7px);
-    z-index: 2;
+    z-index: 20;
 
     &::before {
       width: 8px;
@@ -178,6 +209,7 @@
       border-radius: 50%;
       top: 12px;
       left: 12px;
+      z-index: 2;
     }
 
     &::after {
@@ -188,7 +220,7 @@
       border-radius: 2.5px;
       background-color: #dcdcdc;
       position: absolute;
-      z-index: -1;
+      z-index: 1;
       left: -198px;
       top: 13px;
     }
